# sdag

./: .gitignore  Cargo.toml  Conversation.txt  HOW_TO_ADD_NODE.md  PERFORMANCE.md  README.md  README_DESIGN.md  README_YAML_FORMAT.md  SIMPLE_NODES.md  build.rs  build.sh  example.py  example_add_node.py  example_dag.yaml  example_new_node.rs  example_oo.py  example_pow.yaml  example_simple.yaml  generate_nodes.py  generated_dag.yaml  nodes.yaml  pyproject.toml  sensor_monitor.yaml  setup.py  streaming_example.yaml  test_clean_api.py  test_freeze.py  test_python.py
benches/: engine_bench.rs
deprecated/: README.md  arena.rs  debug_nodes.py  define_node.rs  engine.rs  example_complete.py  example_enhanced.py  example_final.py  example_working.py  generated_nodes.rs  lib_old.rs  lib_simple.rs  lib_v2.rs  node_classes.rs  node_macro.rs  node_macro_v2.rs  node_macros.rs  nodes_v2.rs  simple_node_macro.rs  test_debug.py  test_simple.py
py_node_derive/: Cargo.toml
py_node_derive/src/: lib.rs
py_node_macro/: Cargo.toml
py_node_macro/src/: lib.rs
sdag_derive/: Cargo.toml
sdag_derive/src/: lib.rs  lib_v2.rs
src/: dag.rs  define_node_macro.rs  engine.rs  engine_traits.rs  engines.rs  lib.rs  lib_macro_attempt.rs  lib_minimal.rs  lib_simple.rs  lib_v2.rs  main.rs  node.rs  nodes.rs  python.rs  simple_node_macro.rs  tests.rs  yaml.rs
