[package]
name = "sdag"
version = "0.1.0"
	edition = "2024"

[lib]
name = "sdag"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.18"
py_node_macro = { path = "py_node_macro" }
inventory = "0.1"
paste = "1.0"
sdag_derive = { path = "sdag_derive" }

[build-dependencies]
pyo3-build-config = "0.18"
