[package]
name = "sdag"
version = "0.1.0"
edition = "2021"

[lib]
name = "sdag"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

[features]
default = []
python = ["pyo3"]
